--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>PDST WEB</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
@@ -24,8 +24,11 @@
         <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="/static/python-logo.png" alt="" width="72" height="72">
             <h2>Data Scrapping Tool</h2>
-            <p class="lead">Below is an example form built entirely with Bootstrap's form controls. Each required form group has a validation
-                state that can be triggered by attempting to submit the form without completing it.</p>
+            <p class="lead">
+                This is data scrapping tool build using python. 
+                It reads financial report and get readable data and show them.
+                In this tool, we used NLTK,tabular,pyPDF2,flask and several python tools.
+            </p>
         </div>
 
         <div class="row">
